Implemented a fallback mechanism for synchronous communication and developed a Notification Service to send responses for placed orders. Also established asynchronous communication with the Order Service

--- a/configServer/src/main/resources/config/user-service.properties
+++ b/configServer/src/main/resources/config/user-service.properties
@@ -14,10 +14,12 @@ spring.datasource.password=${DB_PASSWORD}
 spring.jpa.database=POSTGRESQL
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=lionfish.rmq.cloudamqp.com
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.username=eusnhejg
+spring.rabbitmq.password=SV41PrkooObnRJVl3uSaYhvN3XOaoDi-
+spring.rabbitmq.virtual-host=eusnhejg
+spring.rabbitmq.connection-timeout=30000
 
 management.endpoints.web.exposure.include=*
 spring.jmx.enabled=false
