--- a/configServer/src/main/resources/config/gateway.properties
+++ b/configServer/src/main/resources/config/gateway.properties
@@ -9,26 +9,41 @@ eureka.client.fetch-registry=true
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
+management.endpoints.web.exposure.include=*
+management.health.circuitbreakers.enabled=true
+management.endpoint.health.show-details=always
+
 logging.level.org.springframework.cloud.gateway=DEBUG
 logging.level.org.springframework.cloud.loadbalancer=DEBUG
 logging.level.org.springframework.cloud.netflix.eureka=DEBUG
 
 # Routes
-spring.cloud.gateway.routes[0].id=product-service
-spring.cloud.gateway.routes[0].uri=lb://product-service
-spring.cloud.gateway.routes[0].predicates[0]=Path=/api/product/**
+#spring.cloud.gateway.routes[0].id=product-service
+#spring.cloud.gateway.routes[0].uri=lb://product-service
+#spring.cloud.gateway.routes[0].predicates[0]=Path=/api/product/**
+#
+#spring.cloud.gateway.routes[1].id=user-service
+#spring.cloud.gateway.routes[1].uri=lb://user-service
+#spring.cloud.gateway.routes[1].predicates[0]=Path=/api/users/**
+#
+#spring.cloud.gateway.routes[2].id=order-service
+#spring.cloud.gateway.routes[2].uri=lb://order-service
+#spring.cloud.gateway.routes[2].predicates[0]=Path=/api/order/**
+#
+#spring.cloud.gateway.routes[3].id=order-service
+#spring.cloud.gateway.routes[3].uri=lb://order-service
+#spring.cloud.gateway.routes[3].predicates[0]=Path=/api/cart/**
 
-spring.cloud.gateway.routes[1].id=user-service
-spring.cloud.gateway.routes[1].uri=lb://user-service
-spring.cloud.gateway.routes[1].predicates[0]=Path=/api/users/**
-
-spring.cloud.gateway.routes[2].id=order-service
-spring.cloud.gateway.routes[2].uri=lb://order-service
-spring.cloud.gateway.routes[2].predicates[0]=Path=/api/order/**
-
-spring.cloud.gateway.routes[3].id=order-service
-spring.cloud.gateway.routes[3].uri=lb://order-service
-spring.cloud.gateway.routes[3].predicates[0]=Path=/api/cart/**
+#Cricuit breaker
+resilience4j.circuitbreaker.instances.Ecomservice.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.Ecomservice.slidingWindowType=COUNT_BASED
+resilience4j.circuitbreaker.instances.Ecomservice.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.Ecomservice.minimumNumberOfCalls=5
+resilience4j.circuitbreaker.instances.Ecomservice.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.Ecomservice.waitDurationInOpenState=10s
+resilience4j.timelimiter.instances.Ecomservice.timeoutDuration=20s
+resilience4j.circuitbreaker.instances.Ecomservice.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.Ecomservice.automat
 
 #Directly using the Localhost and port
 #spring.cloud.gateway.routes[0].id=product-service
