--- a/configServer/src/main/resources/config/order-service.properties
+++ b/configServer/src/main/resources/config/order-service.properties
@@ -12,13 +12,20 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=lionfish.rmq.cloudamqp.com
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.username=eusnhejg
+spring.rabbitmq.password=SV41PrkooObnRJVl3uSaYhvN3XOaoDi-
+spring.rabbitmq.virtual-host=eusnhejg
+rabbitmq.exchange.name=order.exchange
+rabbitmq.queue.name=order.queue
+rabbitmq.routing.key=order.tracking
+spring.rabbitmq.connection-timeout=30000
 
 management.endpoints.web.exposure.include=*
-spring.jmx.enabled=false
+management.endpoints.health.show-details=always
+management.health.circuitbreakers.enabled=true
+
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
@@ -31,10 +38,13 @@ logging.file.name=logs/${spring.application.name}.log
 
 #Cricuit breaker
 resilience4j.circuitbreaker.instances.productservice.registerHealthIndicator=true
-resilience4j.circuitbreaker.instances.productservice.slidingWindowType=counter_based
+resilience4j.circuitbreaker.instances.productservice.slidingWindowType=COUNT_BASED
 resilience4j.circuitbreaker.instances.productservice.slidingWindowSize=10
 resilience4j.circuitbreaker.instances.productservice.minimumNumberOfCalls=5
 resilience4j.circuitbreaker.instances.productservice.permittedNumberOfCallsInHalfOpenState=3
 resilience4j.circuitbreaker.instances.productservice.waitDurationInOpenState=10s
 resilience4j.circuitbreaker.instances.productservice.failureRateThreshold=50
 resilience4j.circuitbreaker.instances.productservice.automaticTransitionFromOpenToHalfOpenEnabled=true
+
+resilience4j.retry.instances.retryBreak.maxAttempts=5
+resilience4j.retry.instances.retryBreak.waitDuration=500ms
