--- a/configServer/src/main/resources/config/product-service.properties
+++ b/configServer/src/main/resources/config/product-service.properties
@@ -8,20 +8,24 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/product
 
 spring.datasource.username= ${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
-
 spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=lionfish.rmq.cloudamqp.com
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.username=eusnhejg
+spring.rabbitmq.password=SV41PrkooObnRJVl3uSaYhvN3XOaoDi-
+spring.rabbitmq.virtual-host=eusnhejg
+spring.rabbitmq.connection-timeout=30000
+
 
 management.endpoints.web.exposure.include=*
 management.tracing.sampling.probability:1.0
 spring.jmx.enabled=false
+
+
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
